Encoding of HTML special entities in text and displayed code is added.

--- a/graph/graph.html
+++ b/graph/graph.html
@@ -3,7 +3,7 @@
  <h1>Проста діаграма</h1>
 <pre class='code'>data = {
   // A labels array that can contain any sort of values
-  labels: ['пн', 'вт', 'ср', 'чт', 'пт'],
+  labels: [&apos;пн&apos;, &apos;вт&apos;, &apos;ср&apos;, &apos;чт&apos;, &apos;пт&apos;],
   // Our series array that contains series objects or in this case series data arrays
   series: [
     [5, 2, 4, 2, 0],
