--- a/helloworld/test.html
+++ b/helloworld/test.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><meta charset="utf-8"/><link rel="stylesheet" href="style.css"/><title>Doc</title></head><body> <h1> Обчислення суми двох чисел</h1>
+<!doctype html><html><head><meta charset="utf-8"/><link rel="stylesheet" href="style.css"/><title>Doc</title></head><body> <h1> Обчислення суми двох чисел </h1>
 <p class='text'> Початкові значення
 </p><pre class='code'>a=1
 b=2
@@ -15,13 +15,13 @@ b=2
 
 </script><p class='text'> Сума:
 </p><p class='print'>c=<script>document.writeln(c);</script></p>
- <h1>Обчислення суми багатьох чисел</h1>
+ <h1> Обчислення суми багатьох чисел </h1>
 <p class='text'> Сума чисел від 1 до 100
 </p><pre class='code'> // Ініціалізуємо акамулятор
 s=0;
 
  // Для всіх чисел від 1 до 100
-for(i=1; i<=100; i++) {
+for(i=1; i&lt;=100; i++) {
   // Додаємо число до акамулятора
   s += i;
 }
