Display printing statement in HTML as is.

--- a/helloworld/test.html
+++ b/helloworld/test.html
@@ -14,29 +14,29 @@ b=2
 </pre><script>c=a+b
 
 </script><p class='text'> Сума:
-</p><p class='print'>c=<script>document.writeln(c);</script></p>
+</p><p class='print'><script>document.writeln("C=", c);</script></p>
  <h1> Обчислення суми багатьох чисел </h1>
 <p class='text'> Сума чисел від 1 до 100
-</p><pre class='code'> // Ініціалізуємо акамулятор
+</p><pre class='code'> // Ініціалізуємо акумулятор
 s=0;
 
  // Для всіх чисел від 1 до 100
 for(i=1; i&lt;=100; i++) {
-  // Додаємо число до акамулятора
+  // Додаємо число до акумулятора
   s += i;
 }
 
 </pre><script>var i, s; 
 
- // Ініціалізуємо акамулятор
+ // Ініціалізуємо акумулятор
 s=0;
 
  // Для всіх чисел від 1 до 100
 for(i=1; i<=100; i++) {
-  // Додаємо число до акамулятора
+  // Додаємо число до акумулятора
   s += i;
 }
 
 </script><p class='text'> Сума:
-</p><p class='print'>s=<script>document.writeln(s);</script></p>
+</p><p class='print'><script>document.writeln("S=", s);</script></p>
 </body></html>
